# SaladPy

./: LICENSE  README.md  pyproject.toml  setup.py
saladpy/: __init__.py  client.py  exceptions.py
saladpy/methods/: User.py
saladpy/methods/types/: BaseClient.py  UserTypes.py  __init__.py
src/saladpy/: client.py  exceptions.py
src/saladpy/methods/: User.py  __init__.py
