[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saladpy"
version = "1.0.2-a.2"
description = "A Python wrapper for the Salad Web API"
readme = "README.md"
authors = [{ name = "Coddo", email = "coddobusiness@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["salad", "api", "salad-web-api"]

[project.urls]
Homepage = "https://github.com/Coddo-Python/SaladPy"